<resources>
    <string name="app_name">Signup</string>

    <!--activity_main    -->
    <string name="title">Welcome to Compose 🚀</string>
    <string name="user_name">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirm">Password Confirm</string>
    <string name="sign_up">Sign Up</string>
    <string name="valid"></string>
    <string name="username_format_regex">^[a-zA-Z가-힣]+$</string>
    <string name="invalid_username_format">이름에는 숫자나 기호가 포함될 수 없습니다.</string>
    <string name="invalid_username_length">이름은 2~5자여야 합니다.</string>
    <string name="invalid_email_format">이메일 형식이 올바르지 않습니다.</string>
    <string name="invalid_password_format">비밀번호는 영문과 숫자를 포함해야 합니다.</string>
    <string name="invalid_password_length">비밀번호는 8~16자여야 합니다.</string>
    <string name="password_confirm_does_not_match">비밀번호가 일치하지 않습니다.</string>
</resources>